--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@ It implements the finite element method with a <em>civil engineering</em> orient
 like moments and axial forces of beams, in an easy manner.</p>
 <p>Although currently only 2D models are implemented, the code has been designed with 3D support in mind, and will be implemented at
 some point in the future.
-In a similar way, the element library should be expanded in the future, implementing diverse useful elements like plates or shells.</p>
-<div class="admonition note">
-<p class="first admonition-title">Note</p>
+In a similar way, the element library should be expanded in the future, implementing diverse and useful elements like plates or shells.</p>
+<div class="admonition warning">
+<p class="first admonition-title">Warning</p>
 <p class="last">Sajou is currently in a very early stage of development. As such, expect major bugs, radical
 changes in the API, inexplicably burn down of your computer and sudden deaths of kittens. Use under your own
 responsability.</p>
@@ -252,6 +252,7 @@ responsability.</p>
       <script type="text/javascript" src="_static/jquery.js"></script>
       <script type="text/javascript" src="_static/underscore.js"></script>
       <script type="text/javascript" src="_static/doctools.js"></script>
+      <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
   
 
