--- a/genindex.html
+++ b/genindex.html
@@ -187,9 +187,9 @@
 </li>
       <li><a href="apiref/sajou.model.html#sajou.model.Model._dimensionality">_dimensionality (sajou.model.Model attribute)</a>
 </li>
-      <li><a href="apiref/sajou.model.html#sajou.model.Model._dof_dirichlet">_dof_dirichlet (sajou.model.Model attribute)</a>
+      <li><a href="apiref/sajou.solvers.html#sajou.solvers.Solver._dof_dirichlet">_dof_dirichlet (sajou.solvers.Solver attribute)</a>
 </li>
-      <li><a href="apiref/sajou.model.html#sajou.model.Model._K">_K (sajou.model.Model attribute)</a>
+      <li><a href="apiref/sajou.solvers.html#sajou.solvers.Solver._K">_K (sajou.solvers.Solver attribute)</a>
 </li>
       <li><a href="apiref/sajou.elements.beam2d.html#sajou.elements.beam2d.Beam2D._k_size">_k_size (sajou.elements.beam2d.Beam2D attribute)</a>
 </li>
@@ -207,15 +207,15 @@
 </li>
       <li><a href="apiref/sajou.model.html#sajou.model.Model._name">_name (sajou.model.Model attribute)</a>
 </li>
-      <li><a href="apiref/sajou.model.html#sajou.model.Model._nfmt">_nfmt (sajou.model.Model attribute)</a>
+      <li><a href="apiref/sajou.solvers.html#sajou.solvers.Solver._nfmt">_nfmt (sajou.solvers.Solver attribute)</a>
 </li>
       <li><a href="apiref/sajou.elements.beam2d.html#sajou.elements.beam2d.Beam2D._nodal_connectivity">_nodal_connectivity (sajou.elements.beam2d.Beam2D attribute)</a>
 </li>
-      <li><a href="apiref/sajou.model.html#sajou.model.Model._P">_P (sajou.model.Model attribute)</a>
+      <li><a href="apiref/sajou.solvers.html#sajou.solvers.Solver._P">_P (sajou.solvers.Solver attribute)</a>
 </li>
       <li><a href="apiref/sajou.elements.beam2d.html#sajou.elements.beam2d.Beam2D._poly_sec_force">_poly_sec_force (sajou.elements.beam2d.Beam2D attribute)</a>
 </li>
-      <li><a href="apiref/sajou.model.html#sajou.model.Model._V">_V (sajou.model.Model attribute)</a>
+      <li><a href="apiref/sajou.solvers.html#sajou.solvers.Solver._V">_V (sajou.solvers.Solver attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -385,13 +385,15 @@
 </li>
       <li><a href="apiref/sajou.plot.display.html#sajou.plot.display.get_deformed_node_coords">get_deformed_node_coords() (in module sajou.plot.display)</a>
 </li>
-      <li><a href="apiref/sajou.plot.display.html#sajou.plot.display.get_element_deformed_node_coords">get_element_deformed_node_coords() (in module sajou.plot.display)</a>
+      <li><a href="apiref/sajou.elements.element.html#sajou.elements.element.Element.get_element_active_dof">get_element_active_dof() (sajou.elements.element.Element method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="apiref/sajou.elements.element.html#sajou.elements.element.Element.get_index_array_of_node">get_index_array_of_node() (sajou.elements.element.Element method)</a>
+      <li><a href="apiref/sajou.plot.display.html#sajou.plot.display.get_element_deformed_node_coords">get_element_deformed_node_coords() (in module sajou.plot.display)</a>
 </li>
-      <li><a href="apiref/sajou.model.html#sajou.model.Model.get_node_and_dof">get_node_and_dof() (sajou.model.Model method)</a>
+      <li><a href="apiref/sajou.elements.element.html#sajou.elements.element.Element.get_node_active_dof">get_node_active_dof() (sajou.elements.element.Element method)</a>
+</li>
+      <li><a href="apiref/sajou.solvers.html#sajou.solvers.Solver.get_node_and_dof">get_node_and_dof() (sajou.solvers.Solver method)</a>
 </li>
       <li><a href="apiref/sajou.model.html#sajou.model.get_node_coords">get_node_coords() (in module sajou.model)</a>
 </li>
@@ -466,6 +468,8 @@
       <ul>
         <li><a href="apiref/sajou.model.html#sajou.model.Model2D.n_dof_per_node">(sajou.model.Model2D attribute)</a>
 </li>
+        <li><a href="apiref/sajou.solvers.html#sajou.solvers.Solver.n_dof_per_node">(sajou.solvers.Solver attribute)</a>
+</li>
       </ul></li>
       <li><a href="apiref/sajou.model.html#sajou.model.Model.n_elements">n_elements (sajou.model.Model attribute)</a>
 </li>
@@ -481,7 +485,7 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="apiref/sajou.model.html#sajou.model.Model.nfat">nfat (sajou.model.Model attribute)</a>
+      <li><a href="apiref/sajou.solvers.html#sajou.solvers.Solver.nfat">nfat (sajou.solvers.Solver attribute)</a>
 </li>
       <li><a href="apiref/sajou.nodes.html#sajou.nodes.Node">Node (class in sajou.nodes)</a>
 </li>
